# SmartHome

./: .env  .gitignore  README.md  craco.config.js  db-data.py  insert-db-data.sql  package-lock.json  package.json  pyproject.toml  smart-home.sql
public/: DatabaseFunctions.py  GenerateData.py  app.py  index.html  routes.py
src/: App.tsx  common.tsx  types.tsx
src/Components/: BudgetModal.tsx  Floorplan.tsx  LineGraph.tsx  NavMenu.tsx  Overview.tsx  Thermostat.tsx
src/Pages/: Dashboard.tsx  Metrics.tsx  Sensors.tsx
src/css/: index.css  style.css
